--- a/.env
+++ b/.env
@@ -1,9 +1,12 @@
-DJANGO_SUPERUSER_USERNAME=admin
-DJANGO_SUPERUSER_PASSWORD=admin
-DJANGO_SUPERUSER_EMAIL=admin@example.com
+DEBUG=True
+ENV=development
 
+DJANGO_SUPERUSER_USERNAME=admin
+DJANGO_SUPERUSER_EMAIL=admin@example.com
+DJANGO_SUPERUSER_PASSWORD=admin
+
+POSTGRES_DB=library
 POSTGRES_USER=admin
 POSTGRES_PASSWORD=admin
-POSTGRES_DB=library
 POSTGRES_HOST=db
 POSTGRES_PORT=5432
